@@ -1,20 +1,25 @@
 package com.data2.defense.core.component;
 
 import com.data2.defense.core.config.IpConfiguration;
+import com.data2.defense.core.dto.Pair;
 import com.data2.defense.core.service.BaseService;
 import com.data2.defense.core.service.IpPortCheckerService;
+import com.data2.defense.core.service.ParentService;
+import org.apache.commons.net.ftp.FTPClient;
+import org.apache.commons.net.ftp.FTPReply;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
 @Component
-public class RedisService extends IpPortCheckerService implements BaseService {
+public class JenkinsService extends ParentService implements BaseService {
 
     @Autowired
     private IpConfiguration configuration;
-    private static final List<Integer> PORT = List.of(6379, 6380, 6381, 6382, 6383, 6384, 6385, 6386, 6387, 6388, 6389);
+    private static final List<Integer> PORT = Arrays.asList(8080,8089);
 
     // 示例用户名和密码列表
     private static final List<String> USERNAMES = Arrays.asList("root", "anonymous", "ftpuser","admin");
@@ -32,6 +37,5 @@ public class RedisService extends IpPortCheckerService implements BaseService {
     public boolean weakPassword() {
         return false;
     }
-
 
 }
